RESOLVED FIXED106258
Tiled-layer TileCaches shouldn't unparent offscreen tiles
https://bugs.webkit.org/show_bug.cgi?id=106258
Summary Tiled-layer TileCaches shouldn't unparent offscreen tiles
Tim Horton
Reported 2013-01-07 14:55:43 PST
Secondary TileCaches shouldn't unparent offscreen tiles, because m_isInWindow is inaccurate (never set to true) for them, so the entirety of this feature doesn't work.
Attachments
patch (7.12 KB, patch)
2013-01-07 15:06 PST, Tim Horton
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2013-01-07 14:56:01 PST
Tim Horton
Comment 2 2013-01-07 15:06:24 PST
Simon Fraser (smfr)
Comment 3 2013-01-07 15:09:03 PST
Comment on attachment 181572 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=181572&action=review > Source/WebCore/ChangeLog:10 > + the TileCache should unparent offscreen tiles. We can't use this behavior for secondary TileCaches Let's call these something other than "secondary". How about "tiled layer TileCaches".
Tim Horton
Comment 4 2013-01-07 15:19:17 PST
Tim Horton
Comment 5 2013-01-07 15:21:35 PST
*** Bug 106205 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2013-01-07 16:21:14 PST
*** Bug 106265 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 7 2013-01-07 22:58:37 PST
*** Bug 106205 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.