Source/WebCore/platform/graphics/TiledBacking.h
@@ -72,6 +72,9 @@ public:
     
     virtual void setAggressivelyRetainsTiles(bool) = 0;
     virtual bool aggressivelyRetainsTiles() const = 0;
+    
+    virtual void setUnparentsOffscreenTiles(bool) = 0;
+    virtual bool unparentsOffscreenTiles() const = 0;
 
     // Exposed for testing
     virtual IntRect tileCoverageRect() const = 0;
